# TaTa

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  components.d.ts  package-lock.json  package.json
src/: App.vue  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/conf/: user.conf
src-tauri/src/: main.rs
src/components/: file-job.vue  img-convert.vue  media-card-pair.vue  media.vue  pic-job.vue  setting.vue  video-job.vue
src/router/: index.ts
src/script/: constants.ts  filetools.ts  imageFormats.ts  media.ts  mp4ToImg.ts  notification.ts  openai.ts  operation-history.ts  settings.ts  undo-operation.ts
src/system/: index.ts
