[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["wann"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
# 图片处理（Rust 原生 image crate），默认 features 已覆盖 PNG/JPEG/GIF/BMP/TIFF/WebP/ICO/TGA/PNM/HDR/DDS/QOI
image = { version = "0.25", default-features = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
